# VortexSTARK

./: AGGREGATION_DESIGN.md  AUDIT.md  BENCHMARKS.md  BENCH_2026-04-27_log_n18.txt  CROSSOVER_2026-05-07.csv  CROSSOVER_2026-05-07.md  Cargo.toml  FELT252_DESIGN.md  PERF_ROADMAP.md  PROFILING.md  README.md  SOUNDNESS.md  STARKNET_POST.md  WSL_SETUP.md  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  security-audit.yml
crates/cuda-backend/: Cargo.toml
crates/cuda-backend/src/: column.rs  component_prover.rs  fri_ops.rs  grind_ops.rs  lib.rs  merkle_ops.rs  poly_ops.rs  quotient_ops.rs
cuda/: accumulate_lift.cu  barycentric_eval.cu  barycentric_eval_forge.cu  batch_inverse_forge.cu  bit_reverse_qm31_forge.cu  blake2s.cu  cairo_constraint.cu  circle_ntt.cu  circle_ntt_batch_forge.cu  circle_ntt_layer_forge.cu  circle_ntt_stwo_batch.cu  constraint_eval_warp.cu  fri.cu  fri_fold_circle_forge.cu  fri_fold_line_forge.cu  gather_forge.cu  grind.cu  grind_forge.cu  merkle_hash_leaves_forge.cu  merkle_leaves_lifted.cu  permute.cu  permute_forge.cu  quotient.cu  reduce_m31.cu
cuda/forge/: barycentric_eval_forge.cu  batch_inverse_forge.cu  bit_reverse_qm31_forge.cu  circle_ntt_batch_forge.cu  circle_ntt_layer_forge.cu  fri_fold_circle_forge.cu  fri_fold_line_forge.cu  gather_forge.cu  grind_forge.cu  merkle_hash_leaves_forge.cu  permute_forge.cu  reduce_m31_forge.cu
cuda/include/: blake2s.cuh
src/: blake2s_m31.rs  circuit_serialize.rs  felt252.rs  fri.rs  lib.rs  merkle.rs  ntt.rs  oods.rs  prover.rs  rpo_m31.rs  snip36.rs  stwo_export.rs
src/cairo_air/: builtins.rs  casm_loader.rs  dict_air.rs  dict_consistency.rs  ec_constraint.rs  hints.rs  logup.rs  prover.rs  stark252_field.rs  starknet_rpc.rs  trace.rs  vm.rs
src/cuda/: ffi.rs
src/device/: buffer.rs
src/field/: m31.rs
src/stark252/: cairo_air.rs  cairo_proof.rs  fri.rs  ntt.rs  prover.rs  stark.rs
tests/: constraint_completeness.rs  rpc_resolver.rs
