[workspace]
members = [".", "crates/cuda-backend"]
resolver = "3"

[package]
name = "vortexstark"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "GPU-native Circle STARK prover for RTX 5090"

[lib]
name = "vortexstark"
path = "src/lib.rs"

[features]
default = []
# Drop BLOWUP_BITS from 2 to 1 (2x vs 4x evaluation blowup). Used to measure the
# 1B-element (log_n=30) headline benchmark; the default BLOWUP_BITS=2 hits a
# hard assertion because log_eval=32 exceeds M31's circle subgroup order of 2^31.
# Security drops from 160-bit to 80-bit when this feature is active — not for
# production use.
bench-max-size = []
# Match Starknet Shinobi (v0.14.2) hardcoded Cairo verifier parameters:
# BLOWUP_BITS=3, POW_BITS=27, N_QUERIES=23. Source pinned at
# proving-utils@0305dbe. zstd-level-3 framing is a separate step
# (vendoring required); see `circuit_serialize::frame_with_zstd`.
shinobi-compat = []

[[bin]]
name = "vortex-bench"
path = "src/bin/bench.rs"

[[bin]]
name = "dashboard"
path = "src/bin/dashboard.rs"

[[bin]]
name = "stark_cli"
path = "src/bin/stark_cli.rs"

[[bin]]
name = "sustained_bench"
path = "src/bin/sustained_bench.rs"

[[bin]]
name = "full_benchmark"
path = "src/bin/full_benchmark.rs"

[[bin]]
name = "rpo_bench"
path = "src/bin/rpo_bench.rs"

[[bin]]
name = "hash_bench"
path = "src/bin/hash_bench.rs"

[[bin]]
name = "gpu_bench"
path = "src/bin/gpu_bench.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
clap = { version = "4", features = ["derive"] }
rand = "0.9"
rayon = "1"
blake2 = "0.10"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
stwo = { git = "https://github.com/garrick99/stwo-fork.git", branch = "cuda-backend" }
