[workspace]
members = [".", "crates/cuda-backend"]
resolver = "3"

[package]
name = "vortexstark"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "GPU-native Circle STARK prover for RTX 5090"

[lib]
name = "vortexstark"
path = "src/lib.rs"

[features]
# Default-on: all nine FORGE-emitted kernel paths. Bug 2 fixed
# 2026-04-27 — root cause was the merkle_hash_leaves.fg source calling
# `reduce_word` on every Blake2s output word unconditionally, while the
# hand-written `cuda_merkle_hash_leaves` only reduces under
# SHINOBI_HASH_REDUCE (i.e. the `shinobi-hash` feature). With
# forge-blake2s on, prove() routed n_cols∈{1,4} through the FORGE
# kernel (reduced output) but prove_lean()'s commit_root_only path
# still used the hand-written kernel (raw 32-bit output). Hashes
# diverged for any leaf whose Blake2s digest had bit 31 set in any
# word — exactly what the 4 failing M31 prover roundtrip tests caught.
# The .fg source now writes raw `out*` and the CPU/GPU mirror agrees
# regardless of feature combo. Opt out with --no-default-features to
# compare against the hand-written baseline.
default = [
    "forge-ntt", "forge-ntt-batch", "forge-fri",
    "forge-blake2s", "forge-permute", "forge-bit-reverse",
    "forge-gather", "forge-barycentric", "forge-grind",
]
# Drop BLOWUP_BITS from 2 to 1 (2x vs 4x evaluation blowup). Used to measure the
# 1B-element (log_n=30) headline benchmark; the default BLOWUP_BITS=2 hits a
# hard assertion because log_eval=32 exceeds M31's circle subgroup order of 2^31.
# Security drops from 160-bit to 80-bit when this feature is active — not for
# production use.
bench-max-size = []
# Match Starknet Shinobi (v0.14.2) hardcoded Cairo verifier parameters:
# BLOWUP_BITS=3, POW_BITS=27, N_QUERIES=23. Source pinned at
# proving-utils@0305dbe. Enables zstd for `frame_with_zstd` to match
# the sequencer's `privacy_prove::compress_proof` at level 3.
shinobi-compat = ["dep:zstd"]
# Enables the `cuda_reduce_words_to_m31` GPU kernel and
# `blake2s_m31::reduce_device_buffer` helper — infrastructure for the
# full Blake2sM31 Merkle rewrite (tracked separately). DOES NOT
# currently alter any prover/verifier path; it's a pure build-layer
# opt-in that keeps the reduction kernel available for the follow-up
# commits that will wire it into the production commit paths.
shinobi-hash = []
# Route Merkle leaf hashing through the FORGE-emitted kernel when n_cols=1.
# FORGE source: forge/analysis/vortex_ntt/merkle_hash_leaves.fg
# (133 proof obligations discharged). Output is byte-identical to the
# hand-written `cuda_merkle_hash_leaves` kernel — verified by
# `gpu_forge_leaf_hash_matches_handwritten`. Default off until the
# 4-column SoA FORGE variant lands.
forge-blake2s = []
# Route Circle NTT butterfly layers through the FORGE-emitted kernel.
# Source: forge/analysis/vortex_ntt/circle_ntt_layer.fg (138 obligations).
# Microbench at n=2^20: hand-written 93µs vs FORGE 18µs (5x speedup).
# Wires through `cuda_circle_ntt_evaluate`, `_interpolate`, and the
# public `cuda_circle_ntt_layer` shim. Batched (multi-column) NTT
# paths still use the hand-written kernel.
forge-ntt = []
# Route the batched (multi-column SoA) Circle NTT butterfly layers
# through the FORGE-emitted kernel via cuda_circle_ntt_batch_layer_forge
# (cuda/circle_ntt_batch_forge.cu, source forge/analysis/vortex_ntt/
# circle_ntt_batch.fg, 148 obligations). Wires the four batched kernel
# launches in cuda_circle_ntt_evaluate_batch / _interpolate_batch.
forge-ntt-batch = []
# Route FRI fold kernels (fold_line_soa, fold_circle_into_line_soa)
# through the FORGE-emitted variants. Sources:
# forge/analysis/vortex_ntt/fri_fold_line.fg (193 obligations) and
# fri_fold_circle.fg (237). Microbench at half_n=2^19: hand-written
# 108µs vs FORGE 14µs (7.8x). Macro dispatch in cuda/fri.cu.
forge-fri = []
# Route SecureField bit-reverse (QM31, 4-u32-per-element) through the
# FORGE-emitted kernel via cuda_bit_reverse_qm31_forge. Source:
# forge/analysis/vortex_ntt/bit_reverse_qm31.fg (12 obligations).
# Dispatch is at the Rust call site in cuda-backend::column.
forge-bit-reverse = []
# Route gather_indices (u32 BaseField + u256 Blake2sHash) through the
# FORGE-emitted kernels via cuda_gather_u32_forge / _u256_forge. The
# FORGE variants take an explicit src_len so the kernel can bounds-
# check the indexed load — host already knows that length, so the
# only Rust-side change is passing self.buf.len() as src_len.
forge-gather = []
# Route the two circle-domain permute kernels (hc-natural ↔ canonic-BRT
# scatter) through the FORGE-emitted variants. Source:
# forge/analysis/vortex_ntt/permute.fg (9 proof obligations).
# Macro dispatch in cuda/permute.cu, host shims in cuda/permute_forge.cu.
forge-permute = []
# Route the barycentric polynomial evaluation kernel through the
# FORGE-emitted variant. Source:
# forge/analysis/vortex_ntt/barycentric_eval.fg
# (197 proof obligations + 9 assume() carries for warp-shuffle and
# EIf write-back invariants).  Macro dispatch in cuda/barycentric_eval.cu;
# host shim in cuda/barycentric_eval_forge.cu.
forge-barycentric = []
# Route the Blake2s PoW grind kernel through the FORGE-emitted variant.
# Source: forge/analysis/vortex_ntt/grind.fg
# (22 proof obligations discharged, 0 user assumptions — Blake2s round
# structure copy-paste-equivalent to merkle_hash_leaves.fg, plus a
# 32-branch unrolled trailing_zeros_u32 chain).
forge-grind = []

[[bin]]
name = "vortex-bench"
path = "src/bin/bench.rs"

[[bin]]
name = "dashboard"
path = "src/bin/dashboard.rs"

[[bin]]
name = "stark_cli"
path = "src/bin/stark_cli.rs"

[[bin]]
name = "sustained_bench"
path = "src/bin/sustained_bench.rs"

[[bin]]
name = "full_benchmark"
path = "src/bin/full_benchmark.rs"

[[bin]]
name = "rpo_bench"
path = "src/bin/rpo_bench.rs"

[[bin]]
name = "hash_bench"
path = "src/bin/hash_bench.rs"

[[bin]]
name = "gpu_bench"
path = "src/bin/gpu_bench.rs"

[[bin]]
name = "forge_bench"
path = "src/bin/forge_bench.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
clap = { version = "4", features = ["derive"] }
rand = "0.9"
rayon = "1"
blake2 = "0.10"
# zstd used by shinobi-compat to match Starknet Shinobi's
# `privacy_prove::compress_proof` level-3 framing.
zstd = { version = "0.13", optional = true }

[build-dependencies]
cc = "1.2"

[dev-dependencies]
stwo = { git = "https://github.com/garrick99/stwo-fork.git", branch = "cuda-backend" }
