[package]
name = "vortex-cuda-backend"
version = "0.1.0"
edition = "2021"
description = "CUDA GPU backend for stwo Circle STARK prover"

[[bin]]
name = "bench-stwo"
path = "src/bin/bench_stwo.rs"

[features]
# Forge-feature passthroughs. These don't add any vortexstark behavior on
# their own; they let the cuda-backend code's `#[cfg(feature = "forge-*")]`
# blocks correctly observe whether the parent vortexstark crate has those
# features turned on, so the cuda-backend can call the forge entry points
# directly (cuda_*_forge) instead of going through the macro dispatch in
# the hand-written wrappers.
forge-bit-reverse = ["vortexstark/forge-bit-reverse"]
forge-gather = ["vortexstark/forge-gather"]

[dependencies]
stwo = { git = "https://github.com/garrick247/stwo-fork.git", rev = "483f8c94c02bc7c4eaf128f2cd2269dd6f1a5f6c", features = ["prover"] }
stwo-constraint-framework = { git = "https://github.com/garrick247/stwo-fork.git", rev = "483f8c94c02bc7c4eaf128f2cd2269dd6f1a5f6c", features = ["prover"] }
vortexstark = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
itertools = "0.14.0"
num-traits = "0.2.17"
tracing = "0.1.40"
starknet-ff = { version = "0.3.7", default-features = false, features = ["alloc", "serde"] }
starknet-crypto = "0.6.2"
blake2 = "0.10.6"

[dev-dependencies]
rand = "0.8.5"
